--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ hr{
 .navbar, .navbar-brand, .navbar-brand:hover, .navbar-nav a{
 	font-size: 14px;
 	color: #1E2128;
-	background: #F7F8F8;
+	background: #ffffff;
 }
 .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(30, 33, 40, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")}
 
@@ -195,7 +195,7 @@ hr{
 
 /*container*/
 #KV{
-	background: #F6F8FC;
+	background:linear-gradient( #ffffff, #F6F8FC);
 	height: 100vh !important;
 	min-height: 450px;
 	text-align: center;
@@ -328,11 +328,13 @@ hr{
 .left{
 	display: inline-block;
 	left: 30px;
+	bottom: 30px;
 }
 .right{
 	display: inline-block;
 	right: 30px;
 	float: right;
+	bottom: 30px;
 }
 /*arrow page*/
 
