--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ hr{
 }
 .title{
 	color: #1E2128;
-	font-weight: lighter;
+	font-weight: bolder;
 }
 .s_title{
 	font-family:Georgia, "Times New Roman", Times, serif;
@@ -458,7 +458,6 @@ hr{
 }
 .title_scribe{
 	color: #000;
-	font-weight: lighter;
 	font-size: 16px;
 }
 .close{
