--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,18 @@ nav.scrollUp {
 	margin: 0 auto;
 	display: inline-block;
 }
+.w-800{
+	width: 90%;
+	max-width: 800px;
+	margin: 0 auto;
+	display: inline-block;
+}
+.w-600{
+	width: 90%;
+	max-width: 600px;
+	margin: 0 auto;
+	display: inline-block;
+}
 .w-300{
 	width: 45%;
 	min-width: 300px;
