--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p{
 	line-height: 32px;
 	font-weight: 300;
 	margin: 0;
-	padding: 0;
+	padding: 0 16px;
 }
 hr{
 	width: 70px;
@@ -358,14 +358,21 @@ nav.scrollUp {
 	bottom: 10px;
 	display: inline-block;
 } 
+.left, .right{
+	background-color: #fffffff1;
+	border-radius: 20px;
+	padding: 8px;
+	height: 50px;
+	box-shadow: 0px 3px 6px 6px #515c691f;
+}
 .left{
-	font-size: 24px;
+	font-size: 22px;
 	display: inline-block;
 	left: 30px;
 	bottom: 30px;
 }
 .right{
-	font-size: 24px;
+	font-size: 22px;
 	display: inline-block;
 	right: 30px;
 	float: right;
@@ -588,6 +595,9 @@ nav.scrollUp {
 	top: 50%;
 	display: block;
 } 
+.left, .right{
+	height: 40px;
+}
 .left{
 	font-size: 18px;
 	left: 30px;
