--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,6 @@ nav.scrollUp {
 	border-radius: 20px;
 	padding: 8px;
 	height: 50px;
-	box-shadow: 0px 3px 6px 6px #515c691f;
 }
 .left{
 	font-size: 22px;
@@ -596,7 +595,11 @@ nav.scrollUp {
 	display: block;
 } 
 .left, .right{
-	height: 40px;
+	height: 45px;
+	background-color: #fffffff1;
+	border-radius: 20px;
+	padding: 8px;
+	box-shadow: 0px 3px 6px 6px #515c691f;
 }
 .left{
 	font-size: 18px;
