--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,14 @@ h5{
 	color: #2F3D4E;
 	margin-top: 20px;
 }
+h6{
+	font-size: 22px;
+	color: #383838;
+	font-weight: bold;
+	letter-spacing: 0.8;
+	text-align: left;
+	margin-top: 40px;
+}
 p{
 	color: #383838;
 	font-size: 16px;
@@ -102,8 +110,18 @@ hr{
 	text-align: center;
 	vertical-align: middle;
 }
+.left-text{
+	text-align: left;
+}
 .mark-pen {
 	background-image: linear-gradient(transparent 50%, rgba(255, 247, 162, 0.5) 50%)
+}
+.bluebar{
+	background-color: #A2C6D1;
+	width: 70px;
+	height: 5px;
+	margin-top: 8px;
+	display: block;
 }
 
 /*bootstrap*/
@@ -516,8 +534,9 @@ nav.scrollUp {
 	padding: 0 20px;
 }
 .title_scribe{
-	color: #000;
+	color: #83909A;
 	font-size: 16px;
+	text-align: center;
 }
 .close{
 	text-align: right;
@@ -528,7 +547,7 @@ nav.scrollUp {
 	margin: 10px;
 }
 .w-900{
-	width: 100%;
+	width: 90%;
 	max-width: 1440px;
 	margin: 0 auto;
 	display: inline-block;
