--- a/css/style.css
+++ b/css/style.css
@@ -519,9 +519,9 @@ nav.scrollUp {
 	padding-left: 4%;
 }
 .img-about{
-	transform: translateY(-5%);
+	/*transform: translateY(-5%);*/
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 /*webdesign*/
 #webdesign button{
