--- a/css/style.css
+++ b/css/style.css
@@ -521,7 +521,7 @@ nav.scrollUp {
 .img-about{
 	/*transform: translateY(-5%);*/
 	width: 100%;
-	height: 100%;
+	height: auto;
 }
 /*webdesign*/
 #webdesign button{
